--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -69,7 +69,7 @@
                             <a class="page-scroll" href="shoppingcart.html">Shopping Cart</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="login.html">Login</a>
+                            <a class="page-scroll" href="/login">Login</a>
                         </li>
                         <li>
                             <a class="page-scroll" href="#location">Location</a>
