--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -88,7 +88,7 @@
                 <div class="row">
                     <div class="col-lg-12 text-center intro-body">
                       <h2 class="brand-heading-secondary">Login / Sign-up</h2>
-                        <a href="#" class="btn btn-default btn-lg">Back to Main Page</a>
+                        <a href="/" class="btn btn-default btn-lg">Back to Main Page</a>
                     </div>
                 </div>
             </div>
@@ -98,12 +98,13 @@
         <input type="checkbox" id="chk" aria-hidden="true">
 
             <div class="signup">
-                <form>
+                <form method="POST" action="/addnewuser">
                     <label for="chk" aria-hidden="true">Sign up</label>
-                    <input type="text" name="txt" placeholder="User name" required="">
+                    <input type="text" name="username" placeholder="User name" required="">
+                    <input type="password" name="password" placeholder="Password" required="">
+                    <input type="text" name="fullname" placeholder="Full Name" required="">
                     <input type="email" name="email" placeholder="Email" required="">
-                    <input type="password" name="pswd" placeholder="Password" required="">
-                    <button>Sign up</button>
+                    <button type="submit">Sign up</button>
                 </form>
             </div>
 
@@ -111,7 +112,7 @@
                 <form>
                     <label for="chk" aria-hidden="true">Login</label>
                     <input type="email" name="email" placeholder="Email" required="">
-                    <input type="password" name="pswd" placeholder="Password" required="">
+                    <input type="password" name="password" placeholder="Password" required="">
                     <button>Login</button>
                 </form>
             </div>
