--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -69,7 +69,7 @@
                             <a class="page-scroll" href="shoppingcart.html">Shopping Cart</a>
                         </li>
                         <li>
-                            <a href="login.html">Login</a>
+                            <a href="/login">Login</a>
                         </li>
                         <li>
                             <a class="page-scroll" href="index.html#location">Location</a>
@@ -109,9 +109,9 @@
             </div>
 
             <div class="login">
-                <form>
+                <form method="POST" action="/userlogin">
                     <label for="chk" aria-hidden="true">Login</label>
-                    <input type="email" name="email" placeholder="Email" required="">
+                    <input type="text" name="username" placeholder="Username" required="">
                     <input type="password" name="password" placeholder="Password" required="">
                     <button>Login</button>
                 </form>
