--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,7 +66,7 @@
                             <a class="page-scroll" href="#team">Our team</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="shoppingcart.html">Shopping Cart</a>
+                            <a class="page-scroll" href="/shoppingcart">Shopping Cart</a>
                         </li>
                         <li>
                             <a class="page-scroll" href="/login">Login</a>
