--- a/src/main/resources/templates/datasets_all.html
+++ b/src/main/resources/templates/datasets_all.html
@@ -27,12 +27,26 @@
     <!--Animate css--> 
     <link href="css/animate.css" rel="stylesheet" type="text/css">
 
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <!-- Label font size quick fix -->
+    <style>
+        input,
+        label {
+            display: inline;
+        }
+        
+        label {
+            font-size: 1.5rem;
+            margin: 0;
+        }
+    </style>
 
     </head>
 
@@ -94,7 +108,26 @@
             </div>
         </div>
 
-
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 filters">
+                    <input type="checkbox" class="all-check-box" checked id="0" />
+                    <label for="0">All</label>
+                    <th:block th:each="assetType: ${assetTypes}">
+                        <input type="checkbox" class="type-check-box" checked th:id="${assetType.getAsset_type_id()}" />
+                        <label th:for="${assetType.getAsset_type_id()}" th:text="${assetType.getTypename()}"></label>
+                    </th:block>
+                </div>
+                 <div class="col-md-8">
+                     <th:block th:each="dataAsset: ${dataAssets}">
+                         <div th:attr="data-type-id=${dataAsset.getAsset_Type().asset_type_id}">
+                             <h3 th:text="${dataAsset.getAssetname()}"></h3>
+                             <p th:text="${dataAsset.getAssetdesc()}"></p>
+                         </div>
+                     </th:block>
+                </div>
+            </div>
+        </div>
             
 
 <!-- Footer -->
@@ -122,6 +155,8 @@
     <script src="js/custom.js" type="text/javascript"></script>
     <script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/wow.js"></script> 
+    <!--JS script for checkboxes-->
+    <script src="js/datasets_all.js"></script>
 
 </body>
 
