--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -230,7 +230,7 @@
                     </div> -->
                 </div>
             </div>
-            <a href="" class="btn btn-default btn-lg">See all datasets</a>
+            <a href="datasets_all" class="btn btn-default btn-lg">See all datasets</a>
         </div>
     </div>
 </section>
