--- a/src/main/resources/templates/shoppingcart.html
+++ b/src/main/resources/templates/shoppingcart.html
@@ -84,46 +84,151 @@
         <!-- Intro Header -->
         <div class="jumbotron jumbotron-billboard">
           <div class="img"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 text-center intro-body">
-                      <h2 class="brand-heading-secondary">Shopping Cart</h2>
-                        <a href="/" class="btn btn-default btn-lg">Back to Main Page</a>
+          <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center intro-body">
+                  <h2 class="brand-heading-secondary">Shopping Cart</h2>
+                  <a href="/" class="btn btn-default btn-lg">Back to Main Page</a>
+              </div>
+          </div>
+      </div>
+  </div>
+
+  <div class="container-fluid shoppingcart cart">
+    <div class="row">
+        <div class="col-md-8">
+            <h2>Shopping Cart</h2>
+            <div class="col align-self-center text-muted">3 items</div>
+            
+            <!-- Shopping cart table -->
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col" class="border-0 bg-light">
+                    <div class="p-2 px-3 text-uppercase">Product</div>
+                  </th>
+                  <th scope="col" class="border-0 bg-light">
+                    <div class="py-2 text-uppercase">Price</div>
+                  </th>
+                  <th scope="col" class="border-0 bg-light">
+                    <div class="py-2 text-uppercase">Quantity</div>
+                  </th>
+                  <th scope="col" class="border-0 bg-light">
+                    <div class="py-2 text-uppercase">Remove</div>
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row" class="border-0">
+                    <div class="p-2">
+                      <div class="ml-3 d-inline-block align-middle">
+                        <h5 class="mb-0"> <a href="#" class="text-dark d-inline-block align-middle text-muted">Dataset Name</a></h5>
+                        <p class="text-muted">Description here</p>
+                      </div>
+                    </div>
+                  </th>
+                  <td class="border-0 align-middle text-muted"><strong>$79.00</strong></td>
+                  <td class="border-0 align-middle text-muted"><strong>3</strong></td>
+                  <td class="border-0 align-middle text-muted"><a href="#" class="text-dark"><i class="fa fa-trash"></i></a></td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="p-2">
+                      <h5 class="mb-0"> <a href="#" class="text-dark d-inline-block align-middle text-muted">Dataset Name</a></h5>
+                        <p class="text-muted">Description here</p>
+                      </div>
+                    </div>
+                  </th>
+                  <td class="align-middle text-muted"><strong>$79.00</strong></td>
+                  <td class="align-middle text-muted"><strong>3</strong></td>
+                  <td class="align-middle text-muted"><a href="#" class="text-dark"><i class="fa fa-trash"></i></a>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="p-2">
+                      <h5 class="mb-0"> <a href="#" class="text-dark d-inline-block align-middle text-muted">Dataset Name</a></h5>
+                        <p class="text-muted">Description here</p>
+                      </div>
+                    </div>
+                    <td class="align-middle text-muted"><strong>$79.00</strong></td>
+                    <td class="align-middle text-muted"><strong>3</strong></td>
+                    <td class="align-middle text-muted"><a href="#" class="text-dark"><i class="fa fa-trash"></i></a>
+                    </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <!-- End -->
+         </div>   
+
+            <div class="col-md-4 cart_payment">
+                <h2>Payment details</h2>
+                <p class="text-muted cart_subscript">
+                You are a few steps away from making a difference for your company. Enter your payment details below </p>
+                <p>
+                    <div class="row">
+                        <div class="col" style="padding-left:0;">ITEMS 3</div>
+                        <div class="col text-right">&euro; 132.00</div>
+                    </div> 
+                    <div class="col-12">
+                        <div class="d-flex flex-column">
+                            <p class="text mb-1">Full Name</p> <input class="form-control mb-3" type="text" placeholder="Name" value="Some Name">
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="d-flex flex-column">
+                            <p class="text mb-1">Card Number</p> <input class="form-control mb-3" type="text" placeholder="1234 5678 435678">
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="d-flex flex-column">
+                            <p class="text mb-1">Expiry</p> <input class="form-control mb-3" type="text" placeholder="MM/YYYY">
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="d-flex flex-column">
+                            <p class="text mb-1">CVV/CVC</p> <input class="form-control mb-3 pt-2 " type="password" placeholder="***">
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="btn btn-default btn-lg mb-3"> <span class="ps-3">Pay now</span> <span class="fas fa-arrow-right"></span> </div>
                     </div>
                 </div>
             </div>
         </div>
 
-       
 
-            
 
-<!-- Footer -->
-<footer>
-    <div class="container text-center">
-        <p>Copyright &copy; Anansi 2022</p>
-    </div>
-</footer>
 
-<!-- jQuery -->
-<script src="js/jquery.js"></script>
+        <!-- Footer -->
+        <footer>
+            <div class="container text-center">
+                <p>Copyright &copy; Anansi 2022</p>
+            </div>
+        </footer>
 
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+        <!-- jQuery -->
+        <script src="js/jquery.js"></script>
 
-<!-- Plugin JavaScript -->
-<script src="js/jquery.easing.min.js"></script>
+        <!-- Bootstrap Core JavaScript -->
+        <script src="js/bootstrap.min.js"></script>
 
-<!-- Custom Theme JavaScript -->
-<script src="js/grayscale.js"></script>
-<!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
+        <!-- Plugin JavaScript -->
+        <script src="js/jquery.easing.min.js"></script>
 
-    <script src="js/jquery.isotope.min.js" type="text/javavscript"></script>
-    <script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
-    <script src="js/custom.js" type="text/javascript"></script>
-    <script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/wow.js"></script> 
+        <!-- Custom Theme JavaScript -->
+        <script src="js/grayscale.js"></script>
+        <!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
 
-</body>
+            <script src="js/jquery.isotope.min.js" type="text/javavscript"></script>
+            <script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+            <script src="js/custom.js" type="text/javascript"></script>
+            <script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
+            <script type="text/javascript" src="js/wow.js"></script> 
 
-</html>
+        </body>
+
+        </html>
