fixed nav bar links. fixed p items that became black instead of white

--- a/src/main/resources/templates/shoppingcart.html
+++ b/src/main/resources/templates/shoppingcart.html
@@ -97,11 +97,11 @@
   <div class="container-fluid shoppingcart cart">
     <div class="row">
         <div class="col-md-8">
-            <h2>Shopping Cart</h2>
+            <h2 id="cart_title">Shopping Cart</h2>
             <div class="col align-self-center text-muted">3 items</div>
             
             <!-- Shopping cart table -->
-          <div class="table-responsive">
+          <div class="table-responsive cart_table">
             <table class="table">
               <thead>
                 <tr>
@@ -125,7 +125,7 @@
                     <div class="p-2">
                       <div class="ml-3 d-inline-block align-middle">
                         <h5 class="mb-0"> <a href="#" class="text-dark d-inline-block align-middle text-muted">Dataset Name</a></h5>
-                        <p class="text-muted">Description here</p>
+                        <p class="text-muted text-dark">Description here</p>
                       </div>
                     </div>
                   </th>
@@ -137,7 +137,7 @@
                   <th scope="row">
                     <div class="p-2">
                       <h5 class="mb-0"> <a href="#" class="text-dark d-inline-block align-middle text-muted">Dataset Name</a></h5>
-                        <p class="text-muted">Description here</p>
+                        <p class="text-muted text-dark">Description here</p>
                       </div>
                     </div>
                   </th>
@@ -150,7 +150,7 @@
                   <th scope="row">
                     <div class="p-2">
                       <h5 class="mb-0"> <a href="#" class="text-dark d-inline-block align-middle text-muted">Dataset Name</a></h5>
-                        <p class="text-muted">Description here</p>
+                        <p class="text-muted text-dark">Description here</p>
                       </div>
                     </div>
                     <td class="align-middle text-muted"><strong>$79.00</strong></td>
