--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -9,7 +9,7 @@ body {
     width: 100%;
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #fff;
+    color: #fff ;
     background-color: #000;
 }
 
@@ -629,15 +629,15 @@ a:focus {
     }
 }
 
-.shoppingcart h2, p {
+#cart_title {
    color: black;
 }
 
-.table-responsive th, h5, td, a{
+.cart_table th, h5, td, a{
 color: black;
 }
 
-.table-responsive p {
+.cart_table p {
     font-size: 14px;
     font-weight: 300;
 }
