--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -102,7 +102,7 @@
                     <label for="chk" aria-hidden="true">Sign up</label>
                     <input type="text" name="username" placeholder="User name" required="">
                     <input type="password" name="password" placeholder="Password" required="">
-                    <input type="text" name="fullname" placeholder="Full Name" required="">
+                    <input type="text" name="name" placeholder="Full Name" required="">
                     <input type="email" name="email" placeholder="Email" required="">
                     <button type="submit">Sign up</button>
                 </form>
