--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -113,6 +113,7 @@
                     <label for="chk" aria-hidden="true">Login</label>
                     <input type="text" name="username" placeholder="Username" required="">
                     <input type="password" name="password" placeholder="Password" required="">
+                    <p style="color: red; font-size: 0.75em; text-align: center;" th:if="${invalidpassword}">Incorrect Username or Password</p>
                     <button>Login</button>
                 </form>
             </div>
