--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -725,7 +725,7 @@ color: black;
 #chk{
     display: none;
 }
-.signup{
+.login{
     position: relative;
     width:100%;
     height: 100%;
@@ -776,25 +776,25 @@ button{
 button:hover{
     background: #2d1eb0;
 }
-.login{
+.signup{
     height: 460px;
     background: #eee;
     border-radius: 60% / 10%;
     transform: translateY(-180px);
     transition: .8s ease-in-out;
 }
-.login label{
+.signup label{
     color: #190f73;
     transform: scale(.6);
 }
 
-#chk:checked ~ .login{
+#chk:checked ~ .signup{
     transform: translateY(-500px);
 }
-#chk:checked ~ .login label{
+#chk:checked ~ .signup label{
     transform: scale(1);    
 }
-#chk:checked ~ .signup label{
+#chk:checked ~ .login label{
     transform: scale(.6);
 }
 
