--- a/src/main/resources/templates/adminlogin.html
+++ b/src/main/resources/templates/adminlogin.html
@@ -49,7 +49,7 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                 <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="index.html">
+            <a class="navbar-brand page-scroll" href="/">
                 <i class="fa fa-cubes"></i>  <span class="light">Anansi</span> Data
             </a>
         </div>
@@ -61,22 +61,10 @@
                     <a href="#page-top"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="index.html#about">About</a>
+                    <a class="page-scroll" href="/shoppingcart">Shopping Cart</a>
                 </li>
                 <li>
-                    <a  href="datasets_all.html">Datasets</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="index.html#team">Our team</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="shoppingcart.html">Shopping Cart</a>
-                </li>
-                <li>
-                    <a href="/login">Login</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="index.html#location">Location</a>
+                    <a href="/login">Customer Login</a>
                 </li>
             </ul>
         </div>
@@ -91,7 +79,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center intro-body">
-                <h2 class="brand-heading-secondary">Login / Sign-up</h2>
+                <h2 class="brand-heading-secondary">Admin Login</h2>
                 <a href="/" class="btn btn-default btn-lg">Back to Main Page</a>
             </div>
         </div>
@@ -102,7 +90,7 @@
     <input type="checkbox" id="chk" aria-hidden="true">
 
     <div class="login">
-        <form method="POST" action="/userlogin">
+        <form method="POST" action="/validateadminlogin">
             <label for="chk" aria-hidden="true">Login</label>
             <input type="text" name="username" placeholder="Username" required="">
             <input type="password" name="password" placeholder="Password" required="">
@@ -110,18 +98,6 @@
             <button>Login</button>
         </form>
     </div>
-
-    <div class="signup">
-        <form method="POST" action="/addnewuser">
-            <label for="chk" aria-hidden="true">Sign up</label>
-            <input type="text" name="username" placeholder="User name" required="">
-            <input type="password" name="password" placeholder="Password" required="">
-            <input type="text" name="name" placeholder="Full Name" required="">
-            <input type="email" name="email" placeholder="Email" required="">
-            <button type="submit">Sign up</button>
-        </form>
-    </div>
-
 
 </div>
 
