udpated all html files to fix nav bar navigation from page to page. updated UsersController and Data_assetsController to flip/flop login/out depending on user logged in status.

--- a/src/main/resources/templates/shoppingcart.html
+++ b/src/main/resources/templates/shoppingcart.html
@@ -60,7 +60,7 @@
                             <a class="page-scroll" href="/#about">About</a>
                         </li>
                         <li>
-                            <a  href="/datasets_all">Datasets</a>
+                            <a class="page-scroll" href="/#datasets">Datasets</a>
                         </li>
                         <li>
                             <a class="page-scroll" href="/#team">Our team</a>
@@ -69,7 +69,7 @@
                             <a class="page-scroll" href="/shoppingcart">Shopping Cart</a>
                         </li>
                         <li>
-                            <a href="/login">Login</a>
+                            <a class="page-scroll" href="/logout">Log Out</a>
                         </li>
                         <li>
                             <a class="page-scroll" href="/#location">Location</a>
