--- a/src/main/resources/templates/adminlogin.html
+++ b/src/main/resources/templates/adminlogin.html
@@ -61,10 +61,22 @@
                     <a href="#page-top"></a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="/#about">About</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="/#datasets">Datasets</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="/shoppingcart">Shopping Cart</a>
                 </li>
                 <li>
-                    <a href="/login">Customer Login</a>
+                    <a class="page-scroll" href="/#team">Our team</a>
+                </li>
+                <li>
+                    <a class="page-scroll" th:href="@{|${loginRouting}|}"><span th:text="${loginstate}"></span></a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="/#location">Location</a>
                 </li>
             </ul>
         </div>
