--- a/src/main/resources/templates/datasets_all.html
+++ b/src/main/resources/templates/datasets_all.html
@@ -59,7 +59,7 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                         <i class="fa fa-bars"></i>
                     </button>
-                    <a class="navbar-brand page-scroll" href="index.html">
+                    <a class="navbar-brand page-scroll" href="/">
                         <i class="fa fa-cubes"></i>  <span class="light">Anansi</span> Data
                     </a>
                 </div>
@@ -71,22 +71,22 @@
                             <a href="#page-top"></a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="index.html#about">About</a>
+                            <a class="page-scroll" href="/#about">About</a>
                         </li>
                         <li>
-                            <a  href="datasets_all.html">Datasets</a>
+                            <a class="page-scroll" href="/#datasets">Datasets</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="index.html#team">Our team</a>
+                            <a class="page-scroll" href="/#team">Our team</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="shoppingcart.html">Shopping Cart</a>
+                            <a class="page-scroll" href="/shoppingcart">Shopping Cart</a>
                         </li>
                         <li>
-                            <a href="login.html">Login</a>
+                            <a class="page-scroll" th:href="@{|${loginRouting}|}"><span th:text="${loginstate}"></span></a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="index.html#location">Location</a>
+                            <a class="page-scroll" href="/#location">Location</a>
                         </li>
                     </ul>
                 </div>
@@ -102,7 +102,7 @@
                 <div class="row">
                     <div class="col-lg-12 text-center intro-body">
                       <h2 class="brand-heading-secondary">All Datasets</h2>
-                        <a href="#" class="btn btn-default btn-lg">Back to Main Page</a>
+                        <a href="/" class="btn btn-default btn-lg">Back to Main Page</a>
                     </div>
                 </div>
             </div>
