--- a/src/main/resources/templates/datasets_all.html
+++ b/src/main/resources/templates/datasets_all.html
@@ -46,6 +46,10 @@
             font-size: 1.5rem;
             margin: 0;
         }
+
+        a {
+            color: white;
+        }
     </style>
 
     </head>
@@ -120,9 +124,10 @@
                 </div>
                  <div class="col-md-8">
                      <th:block th:each="dataAsset: ${dataAssets}">
-                         <div th:attr="data-type-id=${dataAsset.getAsset_Type().asset_type_id}">
+                         <div th:attr="data-type-id=${dataAsset.getAsset_type().asset_type_id}">
                              <h3 th:text="${dataAsset.getAssetname()}"></h3>
                              <p th:text="${dataAsset.getAssetdesc()}"></p>
+                             <a th:href="@{${'/view_data/' + dataAsset.getData_asset_id()}}">Find Out More</a>
                          </div>
                      </th:block>
                 </div>
