--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -900,3 +900,38 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
+
+/* View_data */
+.dataitem-description {
+    background-color: whitesmoke;
+    padding: 4vh 5vh;
+    border-radius: 1rem;
+    margin-top: 5%;
+    color: black;
+}
+
+.data-login-section,
+.data-order-section {
+    background-color: #ddd;
+    color: rgb(65, 65, 65);
+    margin-top: 5%;
+    border-radius: 1rem;
+}
+
+.data-login-section button {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.data-label {
+    font-size: 1.8rem;
+    margin: 2rem;
+    color: rgb(65, 65, 65);
+}
+
+.data-input-text {
+    background-color: white;
+    padding: 0.3rem 0.6rem;
+}
+
+/* View_data */
