--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -101,6 +101,7 @@
                     <label for="chk" aria-hidden="true">Login</label>
                     <input type="text" name="username" placeholder="Username" required="">
                     <input type="password" name="password" placeholder="Password" required="">
+                    <input type="text" name="redirectTo" th:value="${goHereAfterLogin}" style="display: none;">
                     <p style="color: red; font-size: 0.75em; text-align: center;" th:if="${invalidpassword}">Incorrect Username or Password</p>
                     <button>Login</button>
                 </form>
@@ -114,6 +115,7 @@
                     <input type="password" name="password" placeholder="Password" required="">
                     <input type="text" name="name" placeholder="Full Name" required="">
                     <input type="email" name="email" placeholder="Email" required="">
+                    <input type="text" name="redirectTo" th:value="${goHereAfterLogin}" style="display: none;">
                     <p style="color: red; font-size: 0.75em; text-align: center;" th:if="${usedusername}">
                         Username is already taken. Please try again.
                     </p>
