modified '/add_data_cart' to check if item is already in cart. Added quantity_control.js for control of + and - buttons

--- a/src/main/resources/templates/quantity_control.html
+++ b/src/main/resources/templates/quantity_control.html
@@ -3,12 +3,12 @@
 <body>
 	<div th:fragment="quantity_control(quantityValue, productID)">
 		<nav>
-			<ul class="pagination list-inline">
+			<ul class="pagination">
 				<li class="page-item">
 					<a class="page-link minusButton" href="" th:pid="${productID}"><b>-</b></a>
 				</li>
 				<li class="page-item">
-					<input type="text" th:value="${quantityValue}" class="form-control text-center" onkeydown="return false;" style="max-width: 55px; padding: 0px;" th:id="'quantity'+productID"/>
+					<input type="text" th:value="${quantityValue}" class="form-control text-center" onkeydown="return false;" style="max-width: 55px; padding: 0px;" th:id="'quantity' + ${productID}" name="qty"/>
 				</li>
 				<li class="page-item">
 					<a class="page-link plusButton" href="" th:pid="${productID}"><b>+</b></a>
