--- a/src/main/resources/templates/shoppingcart.html
+++ b/src/main/resources/templates/shoppingcart.html
@@ -132,7 +132,7 @@
                       </th>
                       <td class="border-0 align-middle text-muted"><strong>[[${cartItem.getQuantity()}]]x&euro;[[${product.getAssetcost()}]] = &euro;[[${cartItem.getItemCostByQuantity()}]]</strong></td>
                       
-                      <td class="border-0 align-middle text-muted">
+                      <td class="border-0 text-muted">
                         <span th:replace="quantity_control :: quantity_control(${cartItem.getQuantity()}, ${cartItem.getProduct().getData_asset_id()})"></span>
                       </td>
                       
@@ -196,24 +196,22 @@
         </footer>
 
         <!-- jQuery -->
-        <script src="js/jquery.js"></script>
+        <script src="/js/jquery.js"></script>
 
         <!-- Bootstrap Core JavaScript -->
-        <script src="js/bootstrap.min.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
 
         <!-- Plugin JavaScript -->
-        <script src="js/jquery.easing.min.js"></script>
+        <script src="/js/jquery.easing.min.js"></script>
 
         <!-- Custom Theme JavaScript -->
-        <script src="js/grayscale.js"></script>
+        <script src="/js/grayscale.js"></script>
         <!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
 
-            <script src="js/jquery.isotope.min.js" type="text/javavscript"></script>
-            <script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
-            <script src="js/custom.js" type="text/javascript"></script>
-            <script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
-            <script type="text/javascript" src="js/wow.js"></script> 
-
+        <script src="/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+        <script src="/js/custom.js" type="text/javascript"></script>
+        <script type="text/javascript" src="/js/wow.js"></script> 
+        <script src="/js/quantity_control.js"></script>
         </body>
 
         </html>
