--- a/src/main/resources/templates/view_data.html
+++ b/src/main/resources/templates/view_data.html
@@ -156,27 +156,23 @@
     </div>
 </footer>
 
-<!-- jQuery -->
-<script src="js/jquery.js"></script>
+ <!-- jQuery -->
+        <script src="/js/jquery.js"></script>
 
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+        <!-- Bootstrap Core JavaScript -->
+        <script src="/js/bootstrap.min.js"></script>
 
-<!-- Plugin JavaScript -->
-<script src="js/jquery.easing.min.js"></script>
+        <!-- Plugin JavaScript -->
+        <script src="/js/jquery.easing.min.js"></script>
 
-<!-- Custom Theme JavaScript -->
-<script src="js/grayscale.js"></script>
-<!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
+        <!-- Custom Theme JavaScript -->
+        <script src="/js/grayscale.js"></script>
+        <!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
 
-    <script src="js/jquery.isotope.min.js" type="text/javavscript"></script>
-    <script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
-    <script src="js/custom.js" type="text/javascript"></script>
-    <script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/wow.js"></script> 
-    <!--JS script for checkboxes-->
-    <script src="js/datasets_all.js"></script>
-
+        <script src="/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+        <script src="/js/custom.js" type="text/javascript"></script>
+        <script type="text/javascript" src="/js/wow.js"></script> 
+        <script src="/js/quantity_control.js"></script>
 </body>
 
 </html>
