--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -901,6 +901,52 @@ body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
 
+/* Datasets_all */
+
+.all-data-filters input,
+.all-data-filters label {
+    display: inline;
+}
+
+.all-data-filters input {
+    width: 15%;
+}
+
+.all-data-filters label {
+    font-size: 1.5rem;
+    margin: 0;
+    
+}
+
+.all-data-asset {
+    background-color: whitesmoke;
+    color: black;
+    padding: 3rem 5rem;
+    border-radius: 1rem;
+    margin-bottom: 2rem;
+    transition: transform 600ms;
+    transform-origin: top left;
+}
+
+.hidden {
+    display: hidden;
+}
+
+.all-data-asset h3 {
+    text-align: center;
+    color: #538078;
+}
+
+.all-data-asset a {
+    color: #190f73;
+}
+
+.all-data-asset p {
+    margin-bottom: 1rem;
+}
+
+/* Datasets_all */
+
 /* View_data */
 .dataitem-description {
     background-color: whitesmoke;
