--- a/src/main/resources/templates/datasets_all.html
+++ b/src/main/resources/templates/datasets_all.html
@@ -34,24 +34,6 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-    <!-- Label font size quick fix -->
-    <style>
-        input,
-        label {
-            display: inline;
-        }
-        
-        label {
-            font-size: 1.5rem;
-            margin: 0;
-        }
-
-        a {
-            color: white;
-        }
-    </style>
-
     </head>
 
     <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -114,17 +96,19 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-md-4 filters">
+                <div class="col-md-4 all-data-filters">
                     <input type="checkbox" class="all-check-box" checked id="0" />
                     <label for="0">All</label>
                     <th:block th:each="assetType: ${assetTypes}">
-                        <input type="checkbox" class="type-check-box" checked th:id="${assetType.getAsset_type_id()}" />
-                        <label th:for="${assetType.getAsset_type_id()}" th:text="${assetType.getTypename()}"></label>
+                       <div>
+                            <input type="checkbox" class="type-check-box" checked th:id="${assetType.getAsset_type_id()}" />
+                            <label th:for="${assetType.getAsset_type_id()}" th:text="${assetType.getTypename()}"></label>
+                       </div>
                     </th:block>
                 </div>
-                 <div class="col-md-8">
+                 <div class="col-md-8 all-data-assets">
                      <th:block th:each="dataAsset: ${dataAssets}">
-                         <div th:attr="data-type-id=${dataAsset.getAsset_type().asset_type_id}">
+                         <div class="all-data-asset" th:attr="data-type-id=${dataAsset.getAsset_type().asset_type_id}">
                              <h3 th:text="${dataAsset.getAssetname()}"></h3>
                              <p th:text="${dataAsset.getAssetdesc()}"></p>
                              <a th:href="@{${'/view_data/' + dataAsset.getData_asset_id()}}">Find Out More</a>
