--- a/src/main/resources/templates/update_data.html
+++ b/src/main/resources/templates/update_data.html
@@ -114,7 +114,7 @@
                 <h2 th:if="${exists}" th:text="${asset.getAssetname()}" class="brand-heading-secondary"></h2>
                 <h2 th:unless="${exists}" class="brand-heading-secondary">Dataset Does Not Exist</h2>
 
-                <a href="/" class="btn btn-default btn-lg">Back to Main Page</a>
+                <a href="/adminportal" class="btn btn-default btn-lg">Back to Asset List</a>
             </div>
         </div>
     </div>
