--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -965,16 +965,22 @@ body {
 }
 
 .data-login-section,
-.data-order-section {
+.data-order-section,
+.data-back-section {
     background-color: #ddd;
     color: rgb(65, 65, 65);
     margin-top: 5%;
     border-radius: 1rem;
 }
 
-.data-login-section button {
+.data-login-section button,
+.data-back-section button {
     margin-top: 2rem;
     margin-bottom: 2rem;
+}
+
+.data-back-section button span {
+    margin-right: 2rem;
 }
 
 .data-label {
