--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -166,7 +166,7 @@
                  <div class="row">
                     <th:block th:each="i: ${#numbers.sequence(1, featuredCount)}">
                         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                            
+                            <a th:href="@{${'/view_data/' + featuredAssets.get(i - 1).getData_asset_id()}}">
                                 <div class="data-flyer">
                                     <div class="text-box">
                                         <div class="image-box">
